# xleapp-extensions

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/xleapp_extensions/: __init__.py
src/xleapp_extensions/android/: __init__.py
src/xleapp_extensions/android/plugins/: build.py
src/xleapp_extensions/chrome/: __init__.py
src/xleapp_extensions/ios/: __init__.py
src/xleapp_extensions/ios/helpers/: utils.py
src/xleapp_extensions/ios/helpers/parsers/: __init__.py
src/xleapp_extensions/ios/helpers/parsers/ccl/: ccl_bplist.py
src/xleapp_extensions/ios/helpers/parsers/ktx/: ios_ktx2png.py
src/xleapp_extensions/ios/plugins/: 01_fix_files.py  accountConfiguration.py  accounts.py  addressBook.py  alarms.py  appConduit.py  appGrouplisting.py  appItunesMeta.py  appleMapsApplication.py  appleMapsGroup.py  appleMapsSearchHistory.py  applePodcastsEpisodes.py  applePodcastsShows.py  appleWalletCards.py  appleWalletPasses.py  appleWalletTransactions.py  appleWifiKnownNetworks.py  appleWifiScannedPrivateNetworks.py  applicationSnapshots.py  applicationState.py  bluetoothOtherLe.py  bluetoothPaired.py  bluetoothPairedLe.py  calendarIdentity.py  calendarItems.py  calendarList.py  callHistory.py  cashApp.py  cellularWireless.py  cloudkitNoteSharing.py  cloudkitParticipants.py  connectedDevices.py  deviceActivator.py  dhcpHotspotClients.py  dhcpReceivedList.py  discordAccounts.py  discordManifest.py  discordMessages.py  facebookMessengerCalls.py  facebookMessengerChats.py  (+17 more)
